# examen_bentoml

./: .gitignore  README.md  bentofile.yaml  pyproject.toml  requirements.txt
src/api/: api.py  api_unit_test.py
src/data/: prepare_data.py
src/model/: train_model.py
